# KIsan-dePIN

./: .gitignore  README.md
backend/: main.py  pathway_server.py  requirements.txt
backend/app/models/: schemas.py
backend/app/routes/: analyze.py  rag.py
backend/app/services/: rag.py  vision.py
backend/docs/: caqm_2021.txt  happy_seeder.txt  ngt_2015.txt  pusa_bio_2020.txt
contracts/: Anchor.toml  Cargo.toml  DEPLOYMENT.md
contracts/programs/kisan_depin/: Cargo.toml
contracts/programs/kisan_depin/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/: CapturePreview.tsx  FieldCapture.tsx  GreenBalance.tsx  WalletConnect.tsx
frontend/src/lib/: geolocation.ts  mock-data.ts
geospatial/: dmrv_pipeline.py
zk-proofs/: generate_mock_proof.js  input.json  setup_and_prove.sh  verify_compliance.circom
