[package]
name = "kisan-depin"
version = "0.1.0"
description = "Kisan-DePIN: Verify ZK compliance proofs and mint $GREEN carbon credit tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kisan_depin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
